--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@ h2 {
   line-height: 100%;
 }
 
+h3 {
+  font-size: 30px;
+  line-height: 100%;
+}
+
 .button {
   text-align: center;
   font-size: 16px;
@@ -139,6 +144,9 @@ section {
 .all-devices h1 {text-align: center; font-size: 100px; width: 100%;}
 
 .app {left: 50%}
+
+.buynow { width: 100%; display: flex; flex-direction: column; align-items: center; top: 79%}
+.buynow .button {height: fit-content; margin: 1rem;}
 
 .divider {width: 100%; height: 1px; background-color:black; margin: 2rem 0}
 
