--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600&display=swap');
 
+:root {
+  
+  --fs-xl: clamp(6rem, 10vw + 2rem, 11rem);
+  --fs-l: clamp(40px, 30px + 3vw, 80px);
+  --fs-m: clamp(2rem, 5vw + 1rem, 2.8rem);
+  --fs-sm: clamp(1.6rem, 4vw + 0.5rem, 2rem);
+  --fs-s: clamp(16px, 20px - 0.5vw, 18px);
+  --fs-xs: clamp(0.8rem, 4vw + 0.64rem, 0.88rem);
+}
+
+
 * {
   padding: 0;
   margin: 0;
@@ -21,44 +32,26 @@ body {
 p, a, ul, h4, h3, h2, h1, input {
   font-family: 'Archivo';
   font-weight: 500;
-  line-height: 120%;
+  line-height: 100%;
   text-align: left;
   color: white;
   mix-blend-mode: difference;
 }
  
-p, a, input {
-  font-weight: 400;
-  font-size: 16px;
-}
+p, a, input { font-size: var(--fs-s); font-weight: 400; line-height: 120%; }
 
-a {text-decoration: none;}
+a { text-decoration: none; }
 
-a.button { background-color: rgba(0, 0, 0, 0);}
+h1 {  font-size: 120px; }
 
-h1 {
-  font-size: 120px;
-  line-height: 100%;
-}
+h2 {  font-size: var(--fs-l) }
 
-h2 {
-  font-size: 80px;
-  line-height: 100%;
-}
+h3 {  font-size: 50px; }
 
-h3 {
-  font-size: 50px;
-  line-height: 100%;
-}
-
-h4 {
-  font-size: 30px;
-  line-height: 100%;
-}
+h4 {  font-size: 30px; }
 
 .button {
   text-align: center;
-  font-size: 16px;
   border-style: solid;
   border-width: 2px;
   padding: 0.5em;
@@ -66,13 +59,14 @@ h4 {
   cursor: pointer;
 } 
 
-.button :hover {
+.button:hover {
   opacity: 0.5;
 }
 
 .header-placeholder{
   width: 100%;
-  height: calc(6vh + 5rem);
+  height: 6vh;
+  margin-bottom: 5rem;
 }
 
 
@@ -137,9 +131,9 @@ header {
 .logo img {height: 100%}
 
 .mobile-menu {
-  width: 100vw; height: 100vh;
+  width: 100vw; height: 100%;
   background-color: white;
-  position: fixed; top: -100%; left: 0; z-index: 10;
+  position: fixed; top: -100vh; left: 0; z-index: 10;
   display: flex; flex-direction: column; justify-content: space-around; align-items: center;
   padding: 30px 0 60px 0;
   transition: 1s;
@@ -156,7 +150,7 @@ header {
 .cross-line:nth-child(1) {transform: translate(-50%, -50%) rotate(45deg);}
 .cross-line:nth-child(2) {transform: translate(-50%, -50%) rotate(-45deg);}
 
-.mobile-menu ul a{font-size: 30px;}
+.mobile-menu li a{font-size: 30px;}
 
 
 section {
@@ -222,7 +216,8 @@ section {
   width: 95%;
   text-align: center;
   position: absolute;
-  top: 5vh;
+  top: 50%;
+  transform: translateY(-125%);
   font-weight: 500;
   font-size: 20.5vw;
 }
@@ -246,13 +241,6 @@ section {
 .intro-text-container {display: flex; flex-direction: column; align-items: center;}
 .intro-text-container h2 {max-width: 58%; text-align: center; margin-bottom: 3rem;}
 
-.waves-container {
-  height: 200vh;
-  width: calc(100% - 20px);
-  overflow: hidden;
-  position: fixed;
-  top:44vh
-}
 
 .page::-webkit-scrollbar {
   display: none;
@@ -277,6 +265,7 @@ section {
 
 canvas {
   position: fixed;
+  overflow: visible;
   top: 0;
   left: 0;
   z-index: -3;
@@ -313,5 +302,14 @@ footer {
   .desktop-menu {display: none;}
   .burger-menu {display: flex;}
 
+  .header-placeholder{ margin-bottom: 3rem;}
+  .intro-text-container h2 {max-width: 80%; margin-bottom: 2rem;}
+
+  .specta{
+    word-break: break-all;
+    top: 75%;
+    font-size: 40vw;
+    line-height: 80%;
+  }
   
 }
