--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root {
   
-  --fs-xl: clamp(6rem, 10vw + 2rem, 11rem);
-  --fs-l: clamp(40px, 30px + 3vw, 80px);
+  --fs-xl: clamp(50px, 40px + 3vw, 100px);
+  --fs-l: clamp(30px, 20px + 3vw, 80px);
   --fs-m: clamp(2rem, 5vw + 1rem, 2.8rem);
   --fs-sm: clamp(1.6rem, 4vw + 0.5rem, 2rem);
   --fs-s: clamp(16px, 20px - 0.5vw, 18px);
@@ -69,6 +69,8 @@ h4 {  font-size: 30px; }
   margin-bottom: 5rem;
 }
 
+.nowrap { white-space: nowrap; }
+
 
 header {
   width: calc(100% - 20px) ;
@@ -102,7 +104,7 @@ header {
 }
 
 .burger-menu {
-  height: 80%;
+  height: 50%;
   width: fit-content;
   position: absolute;
   right: 0;
@@ -118,8 +120,6 @@ header {
   height: 1px;
   background-color: white;
 } 
-
-.burger-line:nth-child(2) {width: 40px;}
 
 .menu-left {
   width: calc(7em + 3vw);
@@ -158,9 +158,6 @@ section {
   z-index: 5;
   height: 100vh;
   width: 100%;
-  /* border-style: solid;
-  border-color: black;
-  border-width: 2px;  */
 }
 
 @keyframes loading {
@@ -170,8 +167,8 @@ section {
 
 .loading {
   background-color: white;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top:0;
   left:0;
@@ -212,11 +209,15 @@ section {
 .under {z-index: -4;}
 .over {z-index: 9}
 
+
+.intro-text-container {display: flex; flex-direction: column; align-items: center;}
+.intro-text-container h2 {max-width: 58%; text-align: center; margin-bottom: 3rem; font-size: clamp(45px, 20px + 3vw, 80px);}
+
 .specta{
   width: 95%;
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 55%;
   transform: translateY(-125%);
   font-weight: 500;
   font-size: 20.5vw;
@@ -224,23 +225,19 @@ section {
 
 .description-block {position: absolute; top: 33%; width: 35%}
 
-.description-title {margin-bottom: 2rem;}
+.description-title {margin-bottom: 20px;}
 
 .description-block p {max-width: 80%;}
 
-.all-devices {top: 10%; width: 100%;}
-.all-devices h1 {text-align: center; font-size: 100px; width: 100%;}
+.all-devices {top: 10%; width: calc(100% - 20px);}
+.all-devices h1 {text-align: center; font-size: var(--fs-xl); width: 100%; margin-bottom: 20px;}
+.all-devices p {text-align: center; margin: auto;}
 
 .app {left: 50%}
 
+
 .buynow { width: 100%; display: flex; flex-direction: column; align-items: center; top: 79%}
 .buynow .button {height: fit-content; margin: 1rem;}
-
-.divider {width: 100%; height: 1px; background-color:black; margin: 2rem 0}
-
-.intro-text-container {display: flex; flex-direction: column; align-items: center;}
-.intro-text-container h2 {max-width: 58%; text-align: center; margin-bottom: 3rem;}
-
 
 .page::-webkit-scrollbar {
   display: none;
@@ -270,6 +267,7 @@ canvas {
   left: 0;
   z-index: -3;
   opacity: 1; 
+  transition: 1s;
 }
 
 
@@ -287,15 +285,17 @@ canvas {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
 }
 
-.table-container {display: flex; margin: 1rem 0}
+.table-container {display: flex; margin: 10px 0}
 .table-container p {width: 25vw;}
 
 footer {
-  margin-top: 7rem;
+  border-top: solid 1px;
 }
+
+footer .divider {margin: 10px;}
+
 
 @media only screen and (max-width: 768px) {
 
@@ -303,13 +303,27 @@ footer {
   .burger-menu {display: flex;}
 
   .header-placeholder{ margin-bottom: 3rem;}
-  .intro-text-container h2 {max-width: 80%; margin-bottom: 2rem;}
+  .intro-text-container h2 {max-width: 90%; margin-bottom: 2rem;}
 
   .specta{
-    word-break: break-all;
-    top: 75%;
-    font-size: 40vw;
-    line-height: 80%;
+    top: 40%;
   }
   
+  .description-block {top: 55%; width: calc(100% - 20px); left: 0;
+    display: flex; flex-direction: column; align-items: center;}
+  .description-title {text-align: center;}
+  .description-block p {text-align: center;}
+
+  .all-devices {top: 10%}
+  .all-devices h1 {font-size: var(--fs-l);}
+
+  
+  .buynow { top: 70% }
+
+  footer .table-container p { font-size: 12px; width: 50%;}
+  footer .divider { margin: 0;}
+  footer .table-container { margin: 10px 0; }
+
 }
+
+.divider {width: 100%; height: 1px; background-color:black; margin: 2rem 0}
