--- a/product-style.css
+++ b/product-style.css
@@ -31,7 +31,7 @@ header p, header a {
 
 .header-placeholder {margin-bottom: 1rem;}
 
-.span-1 img, .span-2 img {width: 100%; height: 100%; object-fit: cover;}
+img {width: 100%; height: 100%; object-fit: cover;}
 
 section {
     height: auto;
@@ -59,14 +59,9 @@ section {
 
 .loop-image {display: none;}
 
-.mobile-cart {display: none}
+
 
 @media only screen and (max-width: 768px) {
-
-    .desktop-cart {display: none}
-    .mobile-cart {display: block;}
-
-    p {max-width: none;}
 
     .product {flex-direction: column;}
 
@@ -76,12 +71,13 @@ section {
 
     .table-container {justify-content: space-between;}
 
-    .table-container p {width: auto; max-width: none; flex: none;}
+    .table-container p {width: 45%; max-width: none; flex: none;}
 
     .footer-table {justify-content: flex-start;}
 
     .footer-table p {max-width: none; flex: auto;}
 
+    .specs :nth-child(9) :nth-child(1) {display: none;}
 
     .gallery {margin-right: 0; display: flex; overflow: auto; gap: 0px;
         scroll-snap-type: x mandatory; scroll-behavior: smooth;}
