--- a/product-style.css
+++ b/product-style.css
@@ -31,7 +31,7 @@ header p, header a {
 
 .header-placeholder {margin-bottom: 1rem;}
 
-img {width: 100%; height: 100%; object-fit: cover;}
+/* img {width: 100%; height: 100%; object-fit: cover;} */
 
 section {
     height: auto;
@@ -46,9 +46,11 @@ section {
     margin-bottom: 20px;
 }
 
-.gallery :nth-child(n) {overflow: hidden; transition: 1s;}
+.mobile-img {display: none;}
 
-.gallery :nth-child(n) :hover {scale: 1.02;}
+.gallery :nth-child(n) {overflow: hidden; transition: 0.5s; object-fit: cover; width: 100%; height: 100%;}
+
+.gallery :nth-child(n) :hover {scale: 1.05;}
 
 .span-1 {height: 50vh;}
 
@@ -80,7 +82,13 @@ section {
     .specs :nth-child(9) :nth-child(1) {display: none;}
 
     .gallery {margin-right: 0; display: flex; overflow: auto; gap: 0px;
-        scroll-snap-type: x mandatory; scroll-behavior: smooth;}
+        scroll-snap-type: x mandatory;
+        -ms-overflow-style: none; /* for Internet Explorer, Edge */
+        scrollbar-width: none; /* for Firefox */
+        }
+
+    .mobile-img {display: block;}
+    .desktop-img {display: none;}
 
     .gallery:-webkit-scrollbar {display: none;}
 
