--- a/cart-style.css
+++ b/cart-style.css
@@ -1,3 +1,13 @@
+:root {
+  
+    --fs-xl: clamp(50px, 40px + 3vw, 100px);
+    --fs-l: clamp(30px, 20px + 3vw, 80px);
+    --fs-m: clamp(2rem, 5vw + 1rem, 2.8rem);
+    --fs-sm: clamp(20px, 30px - 0.5vw , 26px);
+    --fs-s: clamp(16px, 20px - 0.5vw, 18px);
+    --fs-xs: clamp(0.8rem, 4vw + 0.64rem, 0.88rem);
+  }
+  
 p {max-width: 50vw;}
 
 p, a, ul, h4, h3, h2, h1, input {
@@ -22,6 +32,14 @@ header p, header a {
 .product-text h1 {font-size: 10.25vw;}
 
 .table-container p {max-width: 33%;}
+
+.counter {width: 5em; display: flex; align-items: center; position: absolute; left: -0.5em}
+.counter p {max-width: 1.2em; text-align: center; width: 33%;}
+.plusminus {font-size: var(--fs-sm); cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */}
+.plusminus:hover {opacity: 0.5;}
 
 .price {
     margin: 100px 0;
@@ -77,6 +95,11 @@ section {
     .table-container {justify-content: space-between;}
 
     .table-container p {width: auto; max-width: none; flex: none;}
+
+    .counter p {width: 1em;}
+    .plusminus {font-size: var(--fs-sm); cursor: pointer; transition: 0.5s;}
+    
+    .counter {max-width: none; flex: none; width: fit-content; position: inherit;}
 
     .footer-table {justify-content: flex-start;}
 
