--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ h4 {  font-size: 30px; }
   padding: 0.5em;
   width: fit-content;
   cursor: pointer;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 } 
 
 .button:hover {
